--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,47 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+body {
+  line-height: 1.3;
+  margin: 1.5rem 13rem;
+  font-family: "Crimson Text", serif;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+article {
+  border-bottom: 1px solid #999;
+  padding-bottom: 0.8rem;
+}
+
+article header {
+  line-height: 0.3;
+  margin-top: 2.2rem;
+}
+
+article h1 {
+
+}
+
+article header p {
+  border-bottom: 1px solid #999;
+  padding-bottom: 30px;
+  font-style: italic;
+}
+
+article p {
+
+}
+
+article ol {
+
+}
+
+blockquote {
+
+}
+
+.quote {
+
+}
