--- a/css/main.css
+++ b/css/main.css
@@ -8,15 +8,15 @@ html {
 
 body {
   line-height: 1.3;
-  margin: 1.5rem 13rem;
+  margin: 1.5rem 13rem 1.5rem;
+  max-width: 19rem;
+  min-width: 19rem;
   font-family: "Crimson Text", serif;
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 article {
   border-bottom: 1px solid #999;
-  padding-bottom: 0.8rem;
+  padding-bottom: 5px;
 }
 
 article header {
