Change margin sizes

--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,12 @@ html {
 }
 
 *, *::before, *::after {
-  box-sizing: 2px;
+  box-sizing: inherit;
 }
 
 body {
   line-height: 1.3;
-  margin: 1.5rem 13rem;
+  margin-bottom: 1.3rem;
   max-width: 19rem;
   min-width: 19rem;
   font-family: "Crimson Text", serif;
