--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html {
 
 body {
   line-height: 1.3;
-  margin-bottom: 1.3rem;
+  margin: 1.5rem 13rem;
   max-width: 19rem;
   min-width: 19rem;
   font-family: "Crimson Text", serif;
