--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,10 @@ body {
   margin: 1.5rem 13rem;
   max-width: 19rem;
   min-width: 19rem;
-  font-family: "Crimson Text", serif;
 }
 
 article {
-  border-bottom: 1px solid #999;
+  border-bottom: 2px solid #999;
   padding-bottom: 5px;
 }
 
@@ -25,27 +24,37 @@ article header {
 }
 
 article h1 {
-
+  font-size: 1.5rem;
+  font-family: "Crimson Text", serif;
 }
 
 article header p {
-  border-bottom: 1px solid #999;
+  border-bottom: 2px solid #999;
   padding-bottom: 30px;
   font-style: italic;
+  font-size: 1.125rem;
+  color: #222;
+  font-family: "Crimson Text", serif;
 }
 
 article p {
-
+  color: #222;
+  font-family: "Crimson Text", serif;
 }
 
 article ol {
-
+  text-align: left;
+  padding-left: 16px;
 }
 
-blockquote {
-
+blockquote p {
+  font-size: 1.125rem;
+  color: #555;
+  font-family: "Crimson Text", serif;
 }
 
 .quote {
-
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin: -0.7rem;
 }
