--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 html {
   box-sizing: border-box;
+  border: 2px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin: 1.5rem 13rem;
 }
 
 *, *::before, *::after {
@@ -8,7 +12,7 @@ html {
 
 body {
   line-height: 1.3;
-  margin: 1.5rem 13rem;
+  margin: 0;
   max-width: 19rem;
   min-width: 19rem;
   padding-left: 1rem;
@@ -24,10 +28,15 @@ article header {
   margin-top: 2.2rem;
 }
 
+h1 + p {
+  line-height: 0;
+}
+
 article h1 {
   font-size: 1.5rem;
-  font-family: "Crimson Text", serif;
-  font-weight: bold;
+  font-family: serif;
+  font-weight: normal;
+  color: #222;
 }
 
 article header p {
@@ -42,21 +51,22 @@ article header p {
 article p {
   color: #222;
   font-family: "Crimson Text", serif;
+  padding-top: 2px;
 }
 
 article ol {
   text-align: left;
-  padding-left: 16px;
+  padding-left: 1rem;
+  color: #222;
+  padding-top: .8rem;
 }
 
 blockquote {
   font-size: 1.125rem;
   color: #555;
-  font-family: "Crimson Text", serif;
+  font-family: italic;
 }
 
 .quote {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  margin: -.7rem;
+  font-size: 1em;
 }
